--- a/Gen/Gen.cbp
+++ b/Gen/Gen.cbp
@@ -32,6 +32,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Fib.h" />
+		<Unit filename="HtmlOutput.h" />
+		<Unit filename="R.h" />
+		<Unit filename="lengthm.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
